[package]
name = "portfolio-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
log = "0.4"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.12.5", features = ["blocking", "cookies"] }
regex = "1.10.5"
csv = "1.3.0"
rusqlite = "0.31.0"
spreadsheet-ods = "0.22.5"
assert_float_eq = "1.1.3"

[lints.rust]
dead_code = "allow"