[package]
name = "portfolio-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
yahoo-finance-api = { git = "https://github.com/EVaillant/yahoo-finance-rs" }
env_logger = "0.11"
log = "0.4"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.12", features = ["blocking", "cookies"] }
rusqlite = "0.35"
spreadsheet-ods = "0.24"
assert_float_eq = "1.1"

[lints.rust]
dead_code = "allow"